--- a/md-to-tex/package.json
+++ b/md-to-tex/package.json
@@ -1,9 +1,20 @@
 {
   "name": "md-to-tex",
+  "bin": "bin/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "sort-package-json"
+  },
+  "dependencies": {
+    "@types/js-yaml": "^4.0.9",
+    "js-yaml": "^4.1.0",
+    "marked": "^11.1.0",
+    "minimist": "^1.2.8",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "sort-package-json": "^2.6.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
