feat: add tex2pdf

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "packageManager": "yarn@4.0.2",
   "workspaces": [
     "md2tex",
-    "json2zip"
+    "json2zip",
+    "tex2pdf"
   ],
   "devDependencies": {
     "@types/node": "^20.10.4",
